--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         	<span class="moves">3</span> Moves
 
             <div class="restart">
-        		<i class="fa fa-repeat"></i>
+        		<i class="fa fa-repeat" onclick="restart()"></i>
+
         	</div>
         </section>
 
