feat: Add winning screen

--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
         </ul>
     </div>
 
+    <div class="end-screen"></div>
+
+    <div class="end-screen-content">
+        <i class="fa fa-check-circle-o"></i>
+        <h2>Congratulations!</h2>
+        <p>You won! And in only <span class="game-duration"></span> seconds!</p>
+        <ul class="end-stars"></ul>
+        <br>
+        <button id="new-game" onclick="restart()">Restart game</button>
+    </div>
+
     <script src="js/app.js"></script>
 </body>
 </html>
