feat: Show the current game time

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 <li><i class="fa fa-star"></i></li>
             </ul>
 
-            <span class="moves">0</span> Moves
+            <span class="moves">0</span> Moves in
+
+            <span class="timer">0</span> sec
 
             <div class="restart">
                 <i class="fa fa-repeat" onclick="restart()"></i>
